Modified theme js in order to fix submenu alignment bug. Submenus can now be toggled on or off for accessibility. Added small css to highlight current open submenu.

--- a/website_files/custom.css
+++ b/website_files/custom.css
@@ -302,3 +302,7 @@ USE OR OTHER DEALINGS IN THE SOFTWARE.
 .tree > li > code:before {
     outline: none;
 }
+
+.dropdown-item.open{
+    background-color: #f8f9fa;
+}
